Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29298

No indication when .clang-tidy file contains systax errors

    XMLWordPrintable

Details

    • Linux/X11
    • 817d72df7 (master)

    Description

      When the "Prefer .clang-tidy file" option is checked, and the .clang-tidy file contains syntax errors, there is no warning shown in the Application Output or anywhere else. It seems to revert to the default checks, which are less strict than mine, resulting in the Analyze->Clang-Tidy command showing success when there should in fact be a ton of diagnostic warnings.

      This is quite vexing when I edit the .clang-tidy file by hand. I have to artificially untidy my code to make sure that the .clang-tidy file still works, and then revert my code back to the clean version. Very error-prone for something that's supposed to detect errors!

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-29298
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            ecormier Emile Cormier
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes