ClangTools: Always print stderr output

E.g. clang-tidy prints error messages for invalid config files, but then
continues to run and finishes with exit code zero.

Fixes: QTCREATORBUG-29298
Change-Id: Idbfb7998994ac8197cd863f4bbb2c64ac1bd5525
Reviewed-by: David Schulz <david.schulz@qt.io>